# nvimX

./: .gitignore  .luacheckrc  .luarc.json  .markdownlint.jsonc  .prettierrc.json  .stylua.toml  README.md  init.lua  install-packer  launch.json  lazy-lock.json  mini-init.lua  my-nvim-rtp.lua  myTest.lua  setup_rtp.lua
.archived/lsp_config/: emmet_ls.lua  lua_ls.lua
_archived/lsp_config/: jsonls.lua  pyright.lua
after/compiler/: python.vim
after/ftplugin/: html.lua  html.vim  htmldjango.vim  lua.lua  markdown.vim  plantuml.vim  python.lua  python.vim  yaml.vim
after/plugin/: plantuml-previewer.rc.vim  telescope.lua  treesitter.lua  vimtex.rc.vim  whitespace.vim
colors/: solarized8.vim  solarized8_flat.vim
docs/: backup.md
lua/: .luarc.json  add-on-plugins.lua  color-themes.lua  config_debug_env.lua  debug-plugins.lua  emmet-vim.rc.vim  essential.lua  globals.lua  init-env.lua  keybindings.lua  keymaps.lua  load-plugins.lua  options.lua  plugins.lua  plugins.lua.table  settings.lua  setup-plugins.lua  tabs.lua  tagalong-vim.rc.vim  telescope_template.lua  vim-better-whitespace.rc.vim  vim-closetag.rc.vim  which-key-nvim.lua  which-key.lua
lua/config/: default_config.lua  default_mappings.lua  icons.lua  keymaps.lua  lazy.lua  options.lua
lua/dap-debug/: README.md  dap-lua.lua  dap-python.lua  dap-unit-test.lua  dap.txt  init.lua  init.lua.bak
lua/debug/: README.md  dap-keymaps.lua  django.lua  init.lua  lua.lua  python.lua
lua/debugger/: init.lua  init.lua.bak  keymaps.lua
lua/lsp/: auto-cmp.lua  auto-cmp.lua.bak  autocmp.lua  handlers.lua  init-backup.lua  init-lsp-zero-minial.lua  init-manual.lua  init-my-self.lua  init.lua  init.lua.bak  init_lsp_installer.lua  json-schemas.lua  lsp-autocmp-copilot.lua  lsp-autocmp.lua  lsp-debug.lua  lsp-null-ls.lua  lsp-on-attach.lua  lsp-servers.lua  (+8 more)
my-snippets/: package.json
plugin/: packer_compiled.lua
test/: demo.lua  flake8.py  game.lua  hoverdoc.py  index.js  lint_demo_mypy.py  my-test.html  nvim-surround.txt  pylint.py  snippets.lua
tools/: lzvim  my-nvim
tools/django/: .djlint_rules.yaml  .djlintrc  .flake8  .gitignore  .prettierrc.json  .pydocstyle  .pylintrc  .python-version  .yabs  Pipfile  dev-requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
(+260 files in other folders)
