[tool.poetry]
name = "ex-2023-01"
version = "0.1.0"
description = ""
authors = ["居正中 <AlanJui.1960@gmail.com>"]
readme = "README.md"
packages = [{include = "ex_2023_01"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pyright = "^1.1.294"
pylint-django = "^2.5.3"
django-stubs = "^1.14.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.mypy]
# plugins = ["mypy_django_plugin.main"]
#
# [tool.django-stubs]
# django_settings_module = "web_app.settings"
